# direct_edge_imu

./: CMakeLists.txt  README.md  estimated_poses.txt  main_live_odometry.cpp  package.xml
calib/: config_VI_zhenfei.yaml~  config_euroc.yaml
cfg/: Params.cfg  Params.cfg~
launch/: MH_01_easy.launch  MH_01_easy.launch~  MH_02_easy.launch  MH_02_easy.launch~  MH_03_medium.launch  MH_03_medium.launch~  MH_04_difficult.launch  MH_04_difficult.launch~  MH_05_difficult.launch  MH_05_difficult.launch~  V1_01_easy.launch  V1_01_easy.launch~  V1_02_medium.launch  V1_02_medium.launch~  V1_03_difficult.launch  V1_03_difficult.launch~  VI_zhenfei.launch~  euroc.launch~  euroc_V2_01_easy.launch  euroc_V2_01_easy.launch~  euroc_V2_02_medium.launch  euroc_V2_02_medium.launch~  euroc_V2_03_difficult.launch  euroc_V2_03_difficult.launch~  online_record.launch  online_test.launch  online_test.launch~  replay_test.launch  replay_test.launch~  slam.launch~
src/: FColorMap.h  LiveSLAMWrapper.cpp  LiveSLAMWrapper.h  SlamSystem.cpp  SlamSystem.h  SolveDVO.cpp  SolveDVO.h  SophusUtil.cpp  SophusUtil.h  edge_alignment_factor.h  globalFuncs.h  imu_factor.h  integration_base.h  marginalization_factor.cpp  marginalization_factor.h  midpoint_integration.h  myMath.h  parameters.cpp  parameters.h  pose_local_parameterization.cpp  pose_local_parameterization.h  relative_pose_factor.h  rosPub.h  rosReconfigure.h  settings.cpp  settings.h  tic_toc.h  types.h
src/Tracking/: Frame.cpp  Frame.h  FrameMemory.cpp  FrameMemory.h  LGSX.h  SE3Tracker.cpp  SE3Tracker.h  TrackingReference.cpp  TrackingReference.h
src/quadrotor_msgs/: Odometry.h
